--- a/LiteratureReview/literature_review.bib
+++ b/LiteratureReview/literature_review.bib
@@ -3,20 +3,54 @@
     month     = "November",
     year      = "2013",
     title     = "Roundup of Cloud Computing Forecasts Update, 2013",
-    url       = "http://www.forbes.com/sites/louiscolumbus/2013/11/16/roundup-of-cloud-computing-forecasts-update-2013/",
+    howpublished = "\url{http://www.forbes.com/sites/louiscolumbus/2013/11/16/roundup-of-cloud-computing-forecasts-update-2013/}",
+}
+
+@article{nistcloudcomputing,
+    author    = "Peter Mell and Timothy Grance",
+    month     = "Spetember",
+    year      = "2011",
+    title     = "The \uppercase{NIST} definition of cloud computing",
+    journal   = "Recommandation of National Institute of Standards and Technology",
+}
+
+@misc{website:openstack,
+    author    = "Openstack Community",
+    title     = "Official website for the Openstack project",
+    howpublished = "\url{http://www.openstack.org/}",
 }
 
 @conference{virtualisation,
-    author    = {Paul, Barham and B. Dragovic and K. Fraser and S. Hand and T. Harris and A. Ho and R. Neugebauer and I. Pratt and A. Warfield},
+    author    = "Paul, Barham and B. Dragovic and K. Fraser and S. Hand and T. Harris and A. Ho and R. Neugebauer and I. Pratt and A. Warfield",
     title     = "Xen and the Art of Virtualisation",
     booktitle = "19th ACM Symposium on Operating Systems Principles",
     year      = "2003",
 }
 
 @conference{livemigration,
-    author    = {Christopher, Clark and K. Fraser and S. Hand and J. G. Hansen and E. Jul and C. Limpach and I. Pratt and A. Warfield},
+    author    = "Christopher, Clark and K. Fraser and S. Hand and J. G. Hansen and E. Jul and C. Limpach and I. Pratt and A. Warfield",
     title     = "Live Migration of Virtual Machines",
     booktitle = "2nd Symposium on Networked Systems Design and Implementation (NSDI’05)",
     year      = "2005",
 }
  
+@conference{virtresiliency,
+    author    = "Valentina Salapura",
+    title     = "Cloud computing: Virtualization and resiliency for data center computing",
+    booktitle = "30th International Conference of Computer Design",
+    year      = "2012",
+}
+
+@conference{reassignment:electricitysaving,
+  author     = "Thomas Setzer and Alexander Stage",
+  title      = "Decision support for virtual machine reassignments in enterprise data centers",
+  booktitle  = "Network Operations and Management Symposium",
+  year       = "2010",
+}
+
+@article{reassignment:binpacking1,
+  author     = "Weijia Song and Zhen Xiao and Qi Chen and Haipeng Luo",
+  title      = "An adaptive Resource Provisioning for the Cloud Using Online Bin Packing",
+  journal    = "Transactions on Computers",
+  year       = "2013",
+}
