--- a/LiteratureReview/literature_review.tex
+++ b/LiteratureReview/literature_review.tex
@@ -43,8 +43,6 @@ launched Amazon Web Services (AWS) is born, popularising the concept of cloud
 computing. This platform allows developers and companies to allocate resources
 on demand, and these are provisionned instantly.
 
-\section{Background}
-
 The market of cloud computing has grown really quickly and forcasts predict
 that this expansion won't stop in the near future. The following study gathers
 information from different suveys\cite{website:cloudcomputingmarket}.
@@ -52,19 +50,22 @@ Currently, the public cloud providers represent a market of 47.4 billion of
 dollars and is expecting to grow up to 107.2 billion of dollars on only 4
 years.
 
-Beside public clouds, as is defined in the definition of cloud
-computing\cite{nistcloudcomputing} by the National Institute of Standards and
-Technology, private cloud or hybrid cloud mixing private and public cloud
-infrastructure are being developped more and more.  Thanks to open-source
-projects like Openstack\cite{website:openstack}, clouds environment can be
-installed on private infrastructures. This is necessary, for security,
-performance or data control purposes.
-
 It is no coincidence if the industry and the academic environments are really
 interested by this domain. On the one hand, it is a field where money is
 present and on the second hand, we can consider that we are only at the
 beginning of an era: a lot of things have to be developed, to be optimized and
 to be found.
+
+\section{Background}
+
+An interesting definition of the Cloud Computing\cite{nistcloudcomputing} has
+been written by the National Institute of Standards and Technology. Different
+kind of clouds are specified, if Amazon is a ``public'' cloud, this is not the
+only way to use a cloud infrastructure: private cloud or hybrid cloud mixing
+private and public cloud infrastructure are being developped more and more.
+Thanks to open-source projects like Openstack\cite{website:openstack}, clouds
+environment can be installed on private infrastructures. This is necessary, for
+security, performance or data control purposes.
 
 The evolution of the paradigm of cloud computing has been made possible thanks
 to different technologies. The virtualisation, as explained by Paul Barham et
