--- a/LiteratureReview/literature_review.bib
+++ b/LiteratureReview/literature_review.bib
@@ -54,3 +54,56 @@
   journal    = "Transactions on Computers",
   year       = "2013",
 }
+
+@conference{allocation:hybrid,
+  author    = "Ruben Van den Bossche, Kurt Vanmechelen and Jan Broeckhov",
+  title     = "Cost-Optimal Scheduling in Hybrid IaaS Clouds for Deadline Constrained Workloads",
+  booktitle = "3rd International Conference on Cloud Computing",
+  year      = "2010",
+}
+
+@conference{allocation:heterogeneous,
+  author    = "Mark Stillwell and Frédéric Vivien and Henri Casanova",
+  title     = "Virtual Machine Resource Allocation for Service Hosting on Heterogeneous Distributed Platforms",
+  booktitle = "Parallel \& Distributed Processing Symposium",
+  year      = "2012",
+}
+
+@conference{maths:rrndlp,
+  author    = "Neal E. Young",
+  title     = "Randomized rounding without solving the linear program",
+  booktitle = "6th ACM-SIAM Symposium on Discrete Algorithms",
+  year      = "1995",
+}
+
+@phdthesis{maths:bpheuristics,
+  author    = "David Stifler Johnson",
+  title     = "Near-Optimal Bin Packing Algorithms",
+  school    = "Massachusetts Institute of Technology",
+  year      = "1967",
+}
+
+@article{maths:relaxedonlinebp,
+  author    = "G. Gambosi and A. Postiglione and M. Talamo",
+  title     = "Algorithms for the relaxed online bin-packing model",
+  journal   = "SIAM Journal on Computing",
+  year      = "2000",
+  number    = "5",
+  volume    = "30",
+}
+
+@article{maths:dynamiconlinebp,
+  author    = "Joseph Wun-Tat and Chan Tak-Wah Lam and Prudence W.H. Wong",
+  title     = "Dynamic Bin Packing of Unit Fractions Items",
+  journal   = "Theoretical Computer Science",
+  year      = "2008",
+  number    = "8",
+  volume    = "409",
+}
+
+@conference{reassignment:visbp,
+  author    = "Weijia Song and Zhen Xiao and Qi Chen and Haipeng Luo",
+  title     = "Adaptive Resource Provisioning for the Cloud Using Online Bin Packing",
+  year      = "2013",
+  booktitle = "Transactions on Computers",
+}
