--- a/LiteratureReview/literature_review.tex
+++ b/LiteratureReview/literature_review.tex
@@ -11,6 +11,7 @@
 \usepackage{wrapfig}
 \usepackage{caption}
 \usepackage{multicol}
+\usepackage{float}
 
 \hypersetup{colorlinks=true,
   linkcolor=brown,
@@ -27,6 +28,10 @@
 \title{Literature Review}
 \date{\today}
 
+
+\floatstyle{ruled}
+\newfloat{figequation}{thp}{lop}
+\floatname{figequation}{Equation}
 
 \begin{document}
 
@@ -59,13 +64,23 @@ to be found.
 \section{Background}
 
 An interesting definition of the Cloud Computing\cite{nistcloudcomputing} has
-been written by the National Institute of Standards and Technology. Different
-kind of clouds are specified, if Amazon is a ``public'' cloud, this is not the
-only way to use a cloud infrastructure: private cloud or hybrid cloud mixing
-private and public cloud infrastructure are being developped more and more.
-Thanks to open-source projects like Openstack\cite{website:openstack}, clouds
-environment can be installed on private infrastructures. This is necessary, for
-security, performance or data control purposes.
+been written by the National Institute of Standards and Technology:
+
+\begin{quote}
+	“Cloud computing is a model for enabling ubiquitous, convenient, on-demand
+	network access to a shared pool of configurable computing resources (e.g.,
+	networks, servers, storage, applications, and services) that can be rapidly
+	provisioned and released with minimal management effort or service provider
+	interaction.”
+\end{quote}
+
+Different kind of clouds are specified, if Amazon is a “public” cloud, this is
+not the only way to use a cloud infrastructure: private cloud or hybrid clouds
+mixing private and public cloud infrastructures are being developped more and
+more. Thanks to open-source projects like Openstack\cite{website:openstack},
+cloud environments can be installed on private infrastructures. This is
+sometimes necessary or requested for security, performance or data control
+purposes.
 
 The evolution of the paradigm of cloud computing has been made possible thanks
 to different technologies. The virtualisation, as explained by Paul Barham et
@@ -84,8 +99,8 @@ migration is finalized, but nothing is disrupted.
 
 \section{Motivation}
 
-The legitimate question is ``Why do people migrate their infrastructure to a
-cloud infrastructure?''. The answers are multiple, Valentina Salapura explains
+The legitimate question is “Why do people migrate their infrastructure to a
+cloud infrastructure?”. The answers are multiple, Valentina Salapura explains
 how a virtualized environment improves the resiliency of an
 infrastructure \cite{virtresiliency}. More precisely, when a service requires
 to be scalable, highly available and fault taulerant, using cloud technologies
@@ -100,25 +115,240 @@ is the optimal distributions of the instances among the different servers? It
 depends of what caracteristic has to be optimized.
 
 Thomas Setzer and Alexander Stage base their study on the statement that energy
-represents up to 50\% of operating costs of an infrastructure. That's why there
-is a need to optimize it. Using the virtual machine reassignment through live
-migrations, they are looking at consolidating the VMs on the physical servers.
+represents up to 50\% of operating costs of an
+infrastructure\cite{reassignment:electricitysaving}. That's why there is a need
+to optimize it. Using the virtual machine reassignment through live migrations,
+they are looking at consolidating the VMs on the physical servers.
 Consolidating an infrastructure consists in reducing the number of PMs which
 are hosting instances without disturbing the performance of these.  After this
 operation, useless PMs can be suspended and electricity is saved, then when
 more computational power is required they are resumed dynamically.
 
-In the publication of Weihia Song et al.\cite{reassignment:binpacking1} also
+In the publication \textit{An adaptive Resource Provisioning for the Cloud
+Using Online Bin Packing}\cite{reassignment:binpacking1}, the authors also
 introduce their subject by explaining that it has been estimated that Amazon
 manages more than half a million of physical servers around the world and that
-it must be a priority for them to reduce their expensives by consolidating their
-infrastructure.
+it must be a priority for them to reduce their expensives by consolidating
+their infrastructure.
 
 \section{Algorithms}
 
+We have seend that cloud computing is a hot topic in the Internet industry
+which results in a lot of new problematics in computer science. The resource
+allocation problem is one of them. All over the world, universities have
+started studying different approaches of allocation optimisation. The different
+algorhms listed in this document gather publications around the virtual machine
+assignment and reassignment on a set of physical machines.
+
 \subsection{Linear Programming}
 
+Also known as Linear optimization. It is specialisation of mathematical
+programming, which is focused on linear functions. The main goal of linear
+programming is to find a maximum or a minimum to a linear function given a set
+of constraints, in other words: maximizing profits while minimizing costs. In
+scope of resource allocation, it is required to define the different variables,
+the function we want to optimize and the constraints linked to the variables.
+
+In their work, Ruben Van den Bossche, Kurt Vanmechelen and Jan
+Broeckhov\cite{allocation:hybrid} are working with linear programming. The aim
+of their study is to define a way to optimize the number of allocated virtual
+machines splitted in different cloud infrastructures.  Different constraints
+are defined to setup the scope of the function to minimize.
+
+\begin{figequation}
+	\caption{Example of linear optimization problem}
+	\[
+		Minimize
+		\sum_{k=1}^A \sum_{l=1}^{T_k} \sum_{i=1}^I \sum_{j=1}^C ( y_{klij} \cdot (ni_{kl} \cdot {pi_j} + no_{kl} \cdot po_j) + \sum_{s=1}^S ( p_{ij} \cdot x_{klijs} ))
+	\]
+\end{figequation}
+
+\textit{Equation 1} is the problem they want to solve, in this case a cost
+minimization problem. How can we minize for each task $t$ of each application
+$k$ in each virtual machine $i$ of each cloud insfrastructure $j$ the price of
+the input and output bandwidth ($ni \cdot pi_j$ and $no_{kl} \cdot po_j$) and
+the price the requested virtual machines ($x_{klijs} \cdot p_{ij}$) at each
+unit of time ($S$)
+
+\begin{figequation}
+	\caption{Example of constraints in a linear program}
+	\[
+		\forall j \in [1,C], s \in [1,S]:
+		\sum_{k=1}^{A} \sum_{l=1}^{T_k} \sum_{i=1}^{I} cpu_i \cdot x_{klijs} \leq maxcpu_j
+	\]
+\end{figequation}
+
+The \textit{Equation 2} defines a constraint from the linear proble, which
+explains that in each cloud, at each unit of time, the sum of all the tasks run
+on all the virtual machines instanciated should be less than the number of CPUs
+available.  (There is note that in the case of public clouds, the amount of CPU
+is considered unlimited so this constraint becomes void).
+
+\vspace{1em}
+
+The work of Mark Stillwell, Frédéric Vivien and Henri Casanova, which
+focuses virtual machine resources allocation in heterogeneous
+environment \cite{allocation:heterogeneous} also start by defining a formal
+model based on linear programming. However, as explained in this publication,
+resolving such a problem requires an exponential time, linked to the amount of
+allocations to achieve. As a result using directly this solution on an
+important workload is not feasible.
+
+\vspace{1em}
+
+The work of Neal E. Young about linear optimization
+relaxation\cite{maths:rrndlp} has been used to simplify the original problem
+and transform it from an exponential complexity to a polynomial complexity. The
+“random rounding” is a probabilistic approach which modifies some of the
+constraints by a weaker one.
+
+\begin{figequation}
+	\caption{Application of random rounding}
+	\[
+		\text{constraint before: } 0 \leq x \leq 1 \\
+	\]
+	\[
+		\text{constraint after: } x_r \in {0, 1}
+	\]
+	\[
+		x_r = 1 \text{ with a probability of $x$, otherwise: $0$}
+	\]
+\end{figequation}
+
+However, the RRND approaches is quickly discarded as the results are not good
+enough in the case of resource allocations in heterogeneous environment.
+
 \subsection{Bin packing}
+
+Bin packing is one of the most common approach to resource allocation or
+re-allocation in a cloud environment. It consists in representing “bins”
+associated to a storage capacity and “items” which have to be packed into
+those bins.
+
+\subsubsection{Different variants}
+
+Two main types of bin packing algorithms exist. On the one hand, those
+considered as “offline”. They consider that we have access to all the items to
+find the optimal packing on the different bins. This problem is a NP-hard
+problem, there is no, to this day, a poliynomial way to solve this problem.
+That is why to answer this problem in a reasonable duration, different
+heuristics have to be defined. The most common have been studied by David
+Stiefler Johnson in 1967\cite{maths:bpheuristics}:
+
+\vspace{1em}
+\begin{center}
+	\begin{tabular}{| l | p{7cm} |}
+		\hline
+		Algorithm Name & Description \\
+		\hline
+		First Fit (FF) & Pack the item in the first bin with a large enough capacity \\
+		\hline
+		Best Fit & Pack the item in the bin which will have the less capacity after packing \\
+		\hline
+		Worst Fit & Opposite of Best Fit: Pack the item in the bin with the biggest capacity \\
+		\hline
+		Next Fit & Same as FF except that instead of reconsidering the first bin after packing, the current one then the next one is considered \\
+		\hline
+		*-Fit Decreasing & First, sort the items in a decreasing order, then apply any of the *-Fit algorithm \\
+		\hline
+	\end{tabular}
+\end{center}
+\vspace{1em}
+
+Those different algorithms reduce the complexity of the packing operation to
+$O(n\log{n})$. But as \cite{maths:bpheuristics}'s title explains: they are
+“Near-Optimal”.  The issue is finally to find the best ratio optimality/complexity.
+
+On the other hand, the “online” algorithms, which, on the contrary, are packing
+items at the time they are arriving. In this case bins are already partially
+filled with other items, and it is not always possible to move those. Thus, the
+main goal is to find the best assignment for the newly coming item. Previous
+*-Fit could be directly used. However, it is really limited to pack one item in
+a set of bin, this is why different algorithms have been developed
+
+To answer more precisely to the cloud resource allocation problem, some people
+have defined some variants of those two main categories of bin packing
+algorithms. G. Gambosi and A. Postiglione and M. Talamo have developed a
+“relaxed online bin packing” algorithm\cite{maths:relaxedonlinebp}. It may be
+represent as a mix between online and offline bin packing. When a new item has
+to be packed, it allows an additional limited number of moves among the
+currently packed items.
+
+Another interesting variant is the dynamic online bin packing defined by Joseph
+Wun-Tan.  It differenciates itself from standard online bin packing by allowing
+items to be removed from bins. Static online bin packing doesn't allow these
+items changes, once an item has been placed it doesn't move anymore.
+
+\subsubsection{Their application in resource allocation}
+
+In the scope of virtual machines assignment on physical hosts, the bins are the
+physical servers and the items are the virtual machines we want to assign,
+andconsequently, the services or tasks we want to host. Some additional aspects
+have to be considered: virtual machines need different resources like memory,
+CPU, persistant storage (disk), network input/output. So often, the items we
+want to pack are multidimensional items, and we speak of multidimensional
+vector bin packing. Another interesting point is that moving a virtual machine
+from one host to another has a cost which may be important, and which prevent 
+doing numerous migrations in the meantime.
+
+In the work about online bin packing for virtual machines allocation of Weijia
+Song et al.\cite{reassignment:visbp}, they consider first, that a virtual
+machine only has one dimension, its CPU consumption. From that point they study
+which algorithm may fit this particular problem. They reject “strict” online
+bin packing, because in realistic situations it is uncommon to know exactly
+the future consumption of a virtual machine, so it is necessary to move it
+afterwards, when we can measure it. Moreover, as VMs can be migrated easily,
+there is no reason not considering it if the resulting performance is better.
+“Relaxed online bin packing” allows movements when a new item is packed, but
+an item cannot be resized. “Dynamic online bin packing” is thought inadequate
+in this context too, but often, when an virtual machine has to move the best
+solution is not always to remove it then repack it, but to move others instances
+which are easier to move.
+
+This is why in\cite{reassignment:visbp}, they decided de build an online bin
+packing algorithm which suits the virtualisation environment: “Variable Item
+Size Bin Packing”, its characteristics are the following.
+
+\begin{itemize}
+	\item{As relaxed online bin packing, it allows movements when a new item is packed}
+	\item{Stronger limit of movements, to avoid executing too many migrations}
+	\item{A \texttt{change} operation is defined to modify the size of an item in a bin}
+\end{itemize}
+
+They extend their algorithm to multidimensional vectors by considering the biggest
+value among the different dimensions of a vector, so the problem returns to
+one-dimension. Using this way to simplify the problem is working in some cases.
+Commonly when a resource consumption increases the others are following. For
+example an application having a high network bandwidth requirement, would also have a
+high CPU consumption. Finally, they admit that this solution would work quite poorly
+in the case of instances with non-proportionnal requirements.
+
+In \cite{allocation:heterogeneous}, we have seen that the first approach of the author
+was around linear programming, but the main part of their work is defining a way
+to apply multidimensional vector bin packing to heterogeneous environments. On a first side,
+they deal with the muldimensional aspect of this problem. It is necessary to specify how to
+sort the items because there is not natural way to sort these vector.
+
+\begin{itemize}
+	\item Value of the maximal dimension
+	\item Sum of all dimensions
+	\item Ratio of the max/min
+	\item Difference max-min
+	\item Lexicographic order
+	\item None
+\end{itemize}
+
+Most of the previous algorithms are not considering the way the bins are used.
+In this publication, as it is targeting heterogeneous infrastructure, the order
+the bins are sorted when executing any algorithm matters. All the previous way to
+sort the items can be applied to the set of bins.
+
+All these previous possibilities of ordering among the virtual machines and physical
+hosts are combined and result in a “meta” algorithm which takes the best result
+out of the different combinations of one items ordering and one bins ordering. After
+individual analysis, some sort types are removed from the meta algorithm to improve
+its runtime.
+
 
 \subsection{Network flows}
 
