Update 9 may, end of draft lit review

--- a/LiteratureReview/literature_review.bib
+++ b/LiteratureReview/literature_review.bib
@@ -1,44 +1,44 @@
 @misc{website:cloudcomputingmarket,
-    author    = "Louis Colombus",
-    month     = "November",
-    year      = "2013",
-    title     = "Roundup of Cloud Computing Forecasts Update, 2013",
-    howpublished = "\url{http://www.forbes.com/sites/louiscolumbus/2013/11/16/roundup-of-cloud-computing-forecasts-update-2013/}",
+  author    = "Louis Colombus",
+  month     = "November",
+  year      = "2013",
+  title     = "Roundup of Cloud Computing Forecasts Update, 2013",
+  howpublished = "\url{http://www.forbes.com/sites/louiscolumbus/2013/11/16/roundup-of-cloud-computing-forecasts-update-2013/}",
 }
 
 @article{nistcloudcomputing,
-    author    = "Peter Mell and Timothy Grance",
-    month     = "Spetember",
-    year      = "2011",
-    title     = "The \uppercase{NIST} definition of cloud computing",
-    journal   = "Recommandation of National Institute of Standards and Technology",
+  author    = "Peter Mell and Timothy Grance",
+  month     = "Spetember",
+  year      = "2011",
+  title     = "The \uppercase{NIST} definition of cloud computing",
+  journal   = "Recommandation of National Institute of Standards and Technology",
 }
 
 @misc{website:openstack,
-    author    = "Openstack Community",
-    title     = "Official website for the Openstack project",
-    howpublished = "\url{http://www.openstack.org/}",
+  author    = "Openstack Community",
+  title     = "Official website for the Openstack project",
+  howpublished = "\url{http://www.openstack.org/}",
 }
 
 @conference{virtualisation,
-    author    = "Paul, Barham and B. Dragovic and K. Fraser and S. Hand and T. Harris and A. Ho and R. Neugebauer and I. Pratt and A. Warfield",
-    title     = "Xen and the Art of Virtualisation",
-    booktitle = "19th ACM Symposium on Operating Systems Principles",
-    year      = "2003",
+  author    = "Paul, Barham and B. Dragovic and K. Fraser and S. Hand and T. Harris and A. Ho and R. Neugebauer and I. Pratt and A. Warfield",
+  title     = "Xen and the Art of Virtualisation",
+  booktitle = "19th ACM Symposium on Operating Systems Principles",
+  year      = "2003",
 }
 
 @conference{livemigration,
-    author    = "Christopher, Clark and K. Fraser and S. Hand and J. G. Hansen and E. Jul and C. Limpach and I. Pratt and A. Warfield",
-    title     = "Live Migration of Virtual Machines",
-    booktitle = "2nd Symposium on Networked Systems Design and Implementation (NSDI’05)",
-    year      = "2005",
+  author    = "Christopher, Clark and K. Fraser and S. Hand and J. G. Hansen and E. Jul and C. Limpach and I. Pratt and A. Warfield",
+  title     = "Live Migration of Virtual Machines",
+  booktitle = "2nd Symposium on Networked Systems Design and Implementation (NSDI’05)",
+  year      = "2005",
 }
  
 @conference{virtresiliency,
-    author    = "Valentina Salapura",
-    title     = "Cloud computing: Virtualization and resiliency for data center computing",
-    booktitle = "30th International Conference of Computer Design",
-    year      = "2012",
+  author    = "Valentina Salapura",
+  title     = "Cloud computing: Virtualization and resiliency for data center computing",
+  booktitle = "30th International Conference of Computer Design",
+  year      = "2012",
 }
 
 @conference{reassignment:electricitysaving,
@@ -106,4 +106,91 @@
   title     = "Adaptive Resource Provisioning for the Cloud Using Online Bin Packing",
   year      = "2013",
   booktitle = "Transactions on Computers",
+}
+
+@article{allocation:networkflow, 
+  author    = "Kimish Patel and Murali Annavaram and Massoud Pedram",
+  title     = "NFRA: Generalized Network Flow-Based Resource Allocation for Hosting Centers",
+  journal   = "IEEE Transactions on Computers",
+  volume    = "62",
+  number    = "9",
+  year      = "2013",
+}
+
+@article{algo:antcolony1,
+  author    = "Lskrao Chimakurthi and Madhu Kumar SD",
+  title     = "Power Efficient Resource Allocation for Clouds Using Ant Colony Framework",
+  journal   = "CoRR",
+  year      = "2011",
+}
+
+@conference{algo:antcolony2,
+ author     = "Feller, Eugen and Rilling, Louis and Morin, Christine",
+ title      = "Energy-Aware Ant Colony Based Workload Placement in Clouds",
+ booktitle  = "Proceedings of the 2011 IEEE/ACM 12th International Conference on Grid Computing",
+ year       = "2011",
+} 
+
+@article{algo:antcolony3,
+  author    = "Linan Zhu and Qingshui Li and Lingna He",
+  title     = "Study on Cloud Computing Resource Scheduling Strategy Based on the Ant Colony Optimization Algorithm",
+  year      = "2012",
+  journal   = "IJCSI International Journal of Computer Science",
+  number    = "5",
+  volume    = "9",
+}
+
+@conference{algo:genetics1,
+  author    = "David Wilcox and Andrew McNabb and Kevin Seppi and Kelly Flanagan",
+  title     = "Probabilistic Virtual Machine Assignment",
+  year      = "2010",
+  booktitle = "The First International Conference on Cloud Computing, GRIDs, and Virtualization",
+}
+
+@conference{algo:genetics2,
+  author    = "David Wilcox and Andrew McNabb and Kevin Seppi",
+  title     = "Solving virtual machine packing with a Reordering Grouping Genetic Algorithm",
+  year      = "2010",
+  booktitle = "IEEE Congress on Evolutionary Computation (CEC)",
+}
+
+@misc{website:simgrid,
+  author    = "INRIA",
+  title     = "SimGrid official website",
+  howpublished = "\url{http://simgrid.gforge.inria.fr/}",
+}
+
+@misc{website:cloudsim,
+  author    = "Melbourne University",
+  title     = "Project page of CloudSim",
+  howpublished = "\url{https://code.google.com/p/cloudsim/}",
+}
+
+@misc{website:roadef,
+  author    = "ROADEF members",
+  title     = "ROADEF contest homepage",
+  howpublished = "\url{http://challenge.roadef.org/}"
+}
+
+@article{roadef:ip,
+  title     = "Heuristics and matheuristics for a real-life machine reassignment problem",
+  author    = "Ramon Lopes and Vinicius W.C. Morais and Thiago F. Noronha and Vitor A.A. Souza",
+  journal   = "International Transactions in Operational Research",
+}
+
+@article{roadef:bp1,
+  title     = "An Iterated Local Search Heuristic for Multi-Capacity Bin Packing andMachine Reassignment Problem",
+  author    = "Renaud Masson and Thibaut Vidal and Julien Michallet and Puca Huachi Vaz Penna andVinicius Petrucci and Anand Subramanian and Hugues Dubedout",
+  journal   = "Expert Syst. Appl.",
+  year      = "2013",
+  number    = "30",
+  volume    = "40",
+}
+
+@article{roadef:bp2,
+  title     = "An MDD Approach to Multidimensional Bin Packing",
+  author    = "Brian Kell and Willem-Jan van Hoeve",
+  journal   = "Integration of AI and OR Techniques in Constraint Programming for Combinatorial Optimization Problems Lecture Notes in Computer Science",
+  volume    = "7874",
+  year      = "2013",
 }
